--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "1.8.2",
     "core-js": "^3.6.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "8.0.2",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
@@ -21,8 +23,9 @@
     "@nrwl/eslint-plugin-nx": "14.2.4",
     "@nrwl/jest": "14.2.4",
     "@nrwl/linter": "14.2.4",
+    "@nrwl/node": "^14.2.4",
     "@nrwl/react": "14.2.4",
-    "@nrwl/web": "14.2.4",
+    "@nrwl/web": "^14.2.4",
     "@nrwl/workspace": "14.2.4",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.4.1",
