--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@fullstack/hello-tsc": ["libs/hello-tsc/src/index.ts"],
+      "@fullstack/lib-test": ["libs/lib-test/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
