--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/next": "14.2.4",
     "@reduxjs/toolkit": "1.8.2",
     "core-js": "^3.6.5",
+    "express": "4.17.2",
+    "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "8.0.2",
@@ -18,16 +21,29 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.2.4",
     "@nrwl/cypress": "14.2.4",
     "@nrwl/eslint-plugin-nx": "14.2.4",
+    "@nrwl/express": "^14.2.4",
     "@nrwl/jest": "14.2.4",
     "@nrwl/linter": "14.2.4",
+    "@nrwl/nest": "^14.2.4",
+    "@nrwl/next": "^14.2.4",
     "@nrwl/node": "^14.2.4",
     "@nrwl/react": "14.2.4",
+    "@nrwl/storybook": "^14.2.4",
     "@nrwl/web": "^14.2.4",
     "@nrwl/workspace": "14.2.4",
+    "@storybook/addon-essentials": "~6.5.4",
+    "@storybook/builder-webpack5": "~6.5.4",
+    "@storybook/core-server": "~6.5.4",
+    "@storybook/manager-webpack5": "~6.5.4",
+    "@storybook/react": "~6.5.4",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.3.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.12",
@@ -35,8 +51,10 @@
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
     "babel-jest": "27.5.1",
+    "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -47,8 +65,10 @@
     "nx": "14.2.4",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.1.0",
+    "sass": "1.43.2",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "url-loader": "^3.0.0"
   }
 }
