--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@fullstack/header": ["libs/header/src/index.ts"],
       "@fullstack/hello-tsc": ["libs/hello-tsc/src/index.ts"],
       "@fullstack/lib-test": ["libs/lib-test/src/index.ts"]
     }
