--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@fullstack/header": ["libs/header/src/index.ts"],
       "@fullstack/hello-tsc": ["libs/hello-tsc/src/index.ts"],
-      "@fullstack/lib-test": ["libs/lib-test/src/index.ts"]
+      "@fullstack/lib-test": ["libs/lib-test/src/index.ts"],
+      "@fullstack/nest-lib": ["libs/nest-lib/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
