--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@nrwl/next": "14.2.4",
     "@reduxjs/toolkit": "1.8.2",
     "core-js": "^3.6.5",
@@ -17,12 +20,16 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "8.0.2",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.2.4",
     "@nrwl/cypress": "14.2.4",
     "@nrwl/eslint-plugin-nx": "14.2.4",
