--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.15",
     "@nestjs/platform-express": "^8.0.0",
+    "@nexus/schema": "^0.20.1",
     "@nrwl/next": "14.2.4",
+    "@prisma/client": "^3.15.1",
     "@reduxjs/toolkit": "1.8.2",
+    "apollo-server-express": "^3.8.2",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "graphql": "^16.5.0",
+    "graphql-scalars": "^1.17.0",
     "next": "12.1.5",
+    "nexus": "^1.3.0",
+    "nexus-prisma": "^0.35.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "8.0.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
+    "sqlite3": "^5.0.8",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -71,6 +80,7 @@
     "jest": "27.5.1",
     "nx": "14.2.4",
     "prettier": "^2.6.2",
+    "prisma": "^3.15.1",
     "react-test-renderer": "18.1.0",
     "sass": "1.43.2",
     "ts-jest": "27.1.4",
