--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nrwl/next": "14.2.4",
     "@prisma/client": "^3.15.1",
     "@reduxjs/toolkit": "1.8.2",
+    "ajax-hook": "^2.1.3",
     "apollo-server-express": "^3.8.2",
     "core-js": "^3.6.5",
     "express": "4.17.2",
